# echo-agent

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
echo_agent/: __init__.py  __main__.py
echo_agent/a2a/: client.py  server.py
echo_agent/agent/: context.py  loop.py
echo_agent/bus/: __init__.py  events.py  queue.py
echo_agent/channels/: base.py  cli.py  cron.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  qqbot.py  qqbot_media.py  slack.py  telegram.py  webhook.py  wechat.py  wecom.py  weixin.py  whatsapp.py
echo_agent/cli/: colors.py  prompt.py  service.py  setup.py  status.py
echo_agent/config/: __init__.py  default.yaml  loader.py  schema.py
echo_agent/gateway/: __init__.py  auth.py  editor.py  health.py  hooks.py  media.py  rate_limiter.py  router.py  server.py  session_context.py  session_policy.py
echo_agent/knowledge/: index.py
echo_agent/mcp/: __init__.py  client.py  manager.py  oauth.py  security.py  tool_adapter.py  transport.py
echo_agent/memory/: consolidator.py  contradiction.py  retrieval.py  reviewer.py  store.py  vectors.py
echo_agent/models/: credential_pool.py  (+4 more)
scripts/: install.sh
tests/: test_agent_loop_background.py  test_agent_loop_core.py  test_bus_backpressure.py  test_channel_delivery.py  test_channel_shutdown.py  test_gateway_server.py  test_memory_advanced.py  test_memory_store_save.py  test_message_splitting.py  test_model_router_health.py  test_provider_retry.py  test_scheduler_delivery.py  test_session_atomic.py  test_session_concurrency.py  test_token_streaming.py
(+78 files in other folders)
